--- a/tests/wpt/meta/pointerevents/pointerevent_sequence_at_implicit_release_on_click.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_sequence_at_implicit_release_on_click.html.ini
@@ -1,13 +1,16 @@
 [pointerevent_sequence_at_implicit_release_on_click.html?touch]
+  expected: ERROR
   [touch Boundary events are emitted after lostpointercapture]
     expected: FAIL
 
 
 [pointerevent_sequence_at_implicit_release_on_click.html?pen]
+  expected: ERROR
   [pen Boundary events are emitted after lostpointercapture]
     expected: FAIL
 
 
 [pointerevent_sequence_at_implicit_release_on_click.html?mouse]
+  expected: ERROR
   [mouse Boundary events are emitted after lostpointercapture]
     expected: FAIL
