--- a/tests/wpt/meta/pointerevents/pointerevent_sequence_at_implicit_release_on_drag.html.ini
+++ b/tests/wpt/meta/pointerevents/pointerevent_sequence_at_implicit_release_on_drag.html.ini
@@ -1,3 +1,4 @@
 [pointerevent_sequence_at_implicit_release_on_drag.html]
+  expected: ERROR
   [touch Event sequence at implicit release on drag]
     expected: FAIL
